Fixed a spacing issue in sidebar in css

--- a/css/styles.css
+++ b/css/styles.css
@@ -187,7 +187,7 @@ input[type="text"] {
   position: fixed;
   top: -100%;
   left: 0;
-  height: 83%;
+  height: 85%;
   width: 330px;
   background: #fff;
   box-shadow: 0 2px 5px rgba(0,0,0,0.26);
